# sem-reg-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cloud_store.rs  data_conversion.rs  lib.rs  reg.rs
src/cloud_store/: night_light.rs  prologue.rs
src/cloud_store/night_light/: docs.md  settings.rs  state.rs  time.rs
src/data_conversion/: byte_seq - abandoned, incorrect string handling code.rs  byte_seq.rs  format.rs  hex_bytes.rs  time.rs
src/reg/: monitor.rs
tools/: search-registry.ps1
